tests/kiama/negative/type_errors/L2/8_badcase1.ob
MODULE badcase;

VAR
    avar : INTEGER;
    bvar : BOOLEAN;

BEGIN
    CASE bvar OF
        18 : avar := 19
    END
END badcase.
